@@ -690,3 +690,9 @@ _Py_NotImplementedStruct
 _Py_SwappedOp
 _Py_TrueStruct
 _Py_VaBuildValue_SizeT
+_PyArg_Parse_SizeT
+_PyArg_ParseTuple_SizeT
+_PyArg_ParseTupleAndKeywords_SizeT
+_PyArg_VaParse_SizeT
+_PyArg_VaParseTupleAndKeywords_SizeT
+_Py_BuildValue_SizeT
